; ModuleID = '/home/carl/AnghaBench/lab/engine/code/client/extr_snd_mem.c_SND_free.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/client/extr_snd_mem.c_SND_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@freelist = common dso_local global i32* null, align 8
@inUse = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SND_free(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** @freelist, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = bitcast i32* %4 to i32**
  store i32* %3, i32** %5, align 8
  %6 = load i32*, i32** %2, align 8
  store i32* %6, i32** @freelist, align 8
  %7 = load i32, i32* @inUse, align 4
  %8 = sext i32 %7 to i64
  %9 = add i64 %8, 4
  %10 = trunc i64 %9 to i32
  store i32 %10, i32* @inUse, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
